# amptudix-research-agent-native

./: .env  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
docs/: 01-system-overview.md  02-agent-orchestration.md  03-memory-vector-vault.md  04-research-tools-and-sources.md  05-configuration-and-runtime.md  06-testing-and-ci.md  07-known-gaps-and-improvements.md  08-extension-playbook.md  09-architecture-diagram.md  README.md
src/agents/: agent_helpers.py  base.py  researcher.py  summarizer.py  supervisor.py
src/core/: llm.py  tools_registry.py
src/memory/: vault.py
src/tools/: search_engine.py  web_reader.py
tests/: test_brain.py  test_memory_vault.py  test_search_engine.py  test_supervisor.py  test_web_reader.py
