[project]
name = "amptudix-research-agent-native"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.11.4",
    "httpx>=0.28.1",
    "openai>=2.28.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "trafilatura>=2.0.0",
]
